fix(bug : scrollTo not working) remove implementation of {overflow-x: hidden}. It was originally used to stop mobile view from overflowing

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -23,7 +23,7 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 /*prevent overflow of mobile view*/
-body, html { overflow-x:hidden; }
+/*body, html { overflow-x:hidden; }*/
 
 
 .lergo-tab-content {
